# how-to-trAIn-your-pepperoni

./: .gitignore
Assets/3DModels/Materials/: Bell_BaseColor.mat  Bell_Normal.mat  Bell_OcclusionRoughnessMetallic.mat
Assets/Colors/: cheeseColor.mat  clotchClor.mat  counterDark.mat  counterTop.mat  pizzaPlate.mat  pizzeriaRed.mat  pizzeriaWhite.mat  spinachColor1 1.mat  spinachColor1.mat  windowDark.mat
Assets/Models/: bacon_crispy.glb  ceiling_lamp.glb  dough_and_sauce_baked.glb  pepperoni_slice.glb  table_lamp.glb
Assets/Prefabs/: CanFridge.prefab  CounterSpot.mat  CounterSpot.prefab  Customer.prefab  DiningSet.prefab  Managers.prefab  Pizza.mat  Pizza.prefab  Player.prefab  UI.prefab  brush 1.prefab  brush.prefab  cash_register.prefab  ceiling_lamp.prefab  counter.prefab  customer-new.prefab  customer.prefab  easel 1.prefab  outerPizzeria.prefab  oven.prefab  pizzaiolo-new.prefab  pizzaiolo.prefab  pizzeria.prefab
Assets/Scenes/: EndMenu.unity  Michal.unity  Michał 2.unity  Natalia.scenetemplate  Natalia.unity  StartMenu.unity  pizzeria.unity
Assets/Sounds/: fail-trimmed.flac
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
python/: pyproject.toml
python/pizza_ingredient_classifier/: __init__.py  augment.py  config.py  data.py  evaluate.py  iterate.py  metrics.py  model.py  predict.py  preprocess.py  train.py  utils.py
python/pizza_ingredient_classifier/artifacts/: best_model.pt  evaluation.json  labels.json  metrics.json  pizza_ingredient_classifier.onnx  pizza_ingredient_classifier.onnx.data
(+56 files in other folders)
