[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pizzaiolo-week2"
version = "0.1.0"
description = "Hand-drawn pizza ingredient classifier for the PizzAIolo project"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "onnx>=1.15.0",
    "onnxscript>=0.1.0",
    "Pillow>=10.0.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[tool.setuptools]
packages = ["pizza_ingredient_classifier"]
